--- a/src/main/resources/CentersOwner.fxml
+++ b/src/main/resources/CentersOwner.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.GUIControllers.FirstScreenGUI">
+<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5Project.GUIControllers.FirstScreenGUI">
     <children>
         <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
@@ -40,23 +40,31 @@
                   <Font name="Arial Black" size="11.0" />
                </font>
             </Label>
-            <Button fx:id="backBtnLog1" layoutX="189.0" layoutY="221.0" mnemonicParsing="false" onAction="#back" prefHeight="42.0" prefWidth="71.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textFill="#fffdfd">
+            <Button layoutX="189.0" layoutY="221.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="71.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textFill="#fffdfd">
                <font>
                   <Font name="Sarpanch" size="12.0" />
                </font>
             </Button>
             <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: rgb(179,252,252);">
                <children>
-                  <ImageView fx:id="btnBack" fitHeight="35.0" fitWidth="45.0" onMouseReleased="#back" onTouchReleased="#back">
-                     <image>
-                        <Image url="@images/backArrow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="btnHome" fitHeight="46.0" fitWidth="48.0" onMouseReleased="#home" onTouchReleased="#home">
-                     <image>
-                        <Image url="@images/homeImage.png" />
-                     </image>
-                  </ImageView>
+                  <Button fx:id="btnBack" mnemonicParsing="false" onAction="#back" prefHeight="48.0" prefWidth="78.0" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="35.0" fitWidth="45.0">
+                           <image>
+                              <Image url="@images/backArrow.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="60.0" prefWidth="51.0" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="46.0" fitWidth="48.0">
+                           <image>
+                              <Image url="@images/homeImage.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </HBox>
          </children>
