--- a/src/main/resources/SportCentersResults.fxml
+++ b/src/main/resources/SportCentersResults.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="570.0" prefWidth="320.0" style="-fx-background: black;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.GUIControllers.SportCentersResultsGUI">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="570.0" prefWidth="320.0" style="-fx-background: black;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5Project.GUIControllers.SportCentersResultsGUI">
    <children>
       <ScrollPane hbarPolicy="NEVER" layoutY="80.0" prefHeight="494.0" prefWidth="320.0" style="-fx-background-color: transparent;" vbarPolicy="NEVER">
          <content>
