--- a/src/main/resources/ChooseBookingData.fxml
+++ b/src/main/resources/ChooseBookingData.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +10,8 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.SearchSportCentersGUI">
+
+<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.ChooseBookingDataGUI">
    <children>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
@@ -28,20 +29,7 @@
                   <Font name="Sarpanch" size="12.0" />
                </font>
             </Button>
-            <TextField fx:id="nomeCentroS" layoutX="60.0" layoutY="59.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10;" />
-            <TextField fx:id="cittaCentroS" layoutX="60.0" layoutY="154.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-background-radius: 10; -fx-border-radius: 10;" />
-            <TextField fx:id="viaCentroS" layoutX="60.0" layoutY="249.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-background-radius: 10; -fx-border-radius: 10;" />
-            <Label layoutX="68.0" layoutY="40.0" prefHeight="18.0" prefWidth="183.0" text="Nome Centro Sportivo" textAlignment="CENTER">
-               <font>
-                  <Font name="Stalin One" size="9.0" />
-               </font>
-            </Label>
-            <Label layoutX="137.0" layoutY="131.0" prefHeight="26.0" prefWidth="45.0" text="Città" textAlignment="CENTER">
-               <font>
-                  <Font name="Stalin One" size="9.0" />
-               </font>
-            </Label>
-            <Label layoutX="147.0" layoutY="226.0" prefHeight="26.0" prefWidth="26.0" text="Via" textAlignment="CENTER">
+            <Label layoutX="145.0" layoutY="36.0" prefHeight="26.0" prefWidth="26.0" text="Via" textAlignment="CENTER">
                <font>
                   <Font name="Stalin One" size="9.0" />
                </font>
@@ -73,6 +61,7 @@
                   <Font name="Sarpanch" size="13.0" />
                </font>
             </Label>
+            <DatePicker fx:id="datePicker" layoutX="72.0" layoutY="116.0" promptText="Insert date until 7 days" style="-fx-border-color: black;" />
          </children>
       </Pane>
    </children>
