--- a/src/main/resources/Logged.fxml
+++ b/src/main/resources/Logged.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -35,7 +33,7 @@
                         <Font name="Sarpanch" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="155.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Consult Weather" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="155.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Manage your bookings" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="Sarpanch" size="12.0" />
                      </font>
@@ -44,23 +42,10 @@
             </VBox>
             <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0">
                <children>
-                  <Button fx:id="btnBack" mnemonicParsing="false" onAction="#back" prefHeight="48.0" prefWidth="78.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="35.0" fitWidth="45.0">
-                           <image>
-                              <Image url="@images/backArrow.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="60.0" prefWidth="51.0" style="-fx-background-color: transparent;">
-                     <graphic>
-                        <ImageView fitHeight="46.0" fitWidth="48.0">
-                           <image>
-                              <Image url="@images/homeImage.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="58.0" prefWidth="111.0" style="-fx-background-color: transparent;" text="Log Out" underline="true" wrapText="true">
+                     <font>
+                        <Font name="Sarpanch" size="18.0" />
+                     </font>
                   </Button>
                </children>
             </HBox>
