--- a/src/main/resources/daily_availability_weather.fxml
+++ b/src/main/resources/daily_availability_weather.fxml
@@ -150,7 +150,7 @@
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Button fx:id="btnReserve15" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve15" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -158,7 +158,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve16" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="19.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve16" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="19.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -166,7 +166,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve17" alignment="CENTER" contentDisplay="CENTER" layoutX="255.0" layoutY="68.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve17" alignment="CENTER" contentDisplay="CENTER" layoutX="255.0" layoutY="68.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -174,7 +174,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve18" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="118.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve18" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="118.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -182,7 +182,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve19" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="168.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve19" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="168.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -190,7 +190,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve20" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="216.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve20" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="216.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -198,7 +198,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve21" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="266.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve21" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="266.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
@@ -206,7 +206,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="btnReserve22" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="316.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+            <Button fx:id="btnReserve22" alignment="CENTER" contentDisplay="CENTER" layoutX="259.0" layoutY="316.0" mnemonicParsing="false" onAction="#choosenBookingHour" prefHeight="22.0" prefWidth="58.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Reserve" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                <font>
                   <Font name="Sarpanch" size="10.0" />
                </font>
