--- a/src/main/resources/Connect5.fxml
+++ b/src/main/resources/Connect5.fxml
@@ -5,14 +5,24 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.FirstScreenGUI">
+<Pane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.FirstScreenGUI">
    <children>
-      <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;" AnchorPane.rightAnchor="0.0">
+      <ImageView fitHeight="469.0" fitWidth="320.0" layoutY="102.0">
+         <image>
+            <Image url="@images/campo_progetto.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="237.0" fitWidth="320.0" layoutY="102.0">
+         <image>
+            <Image url="@images/main_ball01.jpg" />
+         </image>
+      </ImageView>
+      <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
             <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
                <font>
@@ -24,26 +34,19 @@
             </Label>
          </children>
       </HBox>
-      <ImageView fitHeight="199.0" fitWidth="320.0" layoutY="101.0">
-         <image>
-            <Image url="@images/myLogo.jpg" />
-         </image>
-      </ImageView>
-      <VBox alignment="CENTER" layoutY="300.0" prefHeight="270.0" prefWidth="320.0" spacing="50.0" style="-fx-background-color: rgb(179,252,252);">
+      <VBox alignment="CENTER" layoutY="339.0" prefHeight="231.0" prefWidth="320.0" spacing="50.0" style="-fx-border-width: 1 0 0 0 px; -fx-border-color: BLACK;">
          <children>
-            <Button fx:id="btnLog" mnemonicParsing="false" onAction="#login" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Login" textFill="WHITE">
+            <Button fx:id="btnLog" mnemonicParsing="false" onAction="#login" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Login" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Sarpanch" size="13.0" />
-               </font></Button>
-            <Button fx:id="btnCreatAcc" mnemonicParsing="false" onAction="#createAccount" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Crea Account" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               </font>
+            </Button>
+            <Button fx:id="btnCreatAcc" mnemonicParsing="false" onAction="#createAccount" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20; -fx-border-color: BLACK; -fx-border-radius: 20;" text="Crea Account" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font name="Sarpanch" size="13.0" />
                </font>
             </Button>
          </children>
-         <padding>
-            <Insets left="10.0" />
-         </padding>
       </VBox>
    </children>
-</AnchorPane>
+</Pane>
