--- a/src/main/resources/Logged.fxml
+++ b/src/main/resources/Logged.fxml
@@ -2,14 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.LoggedGUI">
+<AnchorPane maxHeight="-Infinity" prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: GREEN;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.LoggedGUI">
    <children>
+      <ImageView fitHeight="469.0" fitWidth="320.0" layoutY="102.0">
+         <image>
+            <Image url="@images/campo_progetto.jpg" />
+         </image>
+      </ImageView>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
             <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
@@ -19,37 +25,29 @@
             </Label>
          </children>
       </HBox>
-      <Pane layoutY="102.0" prefHeight="468.0" prefWidth="320.0" style="-fx-background-color: rgb(179,252,252);">
+      <VBox alignment="CENTER" layoutY="102.0" prefHeight="468.0" prefWidth="320.0" spacing="50.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="366.0" prefWidth="320.0" spacing="50.0">
-               <children>
-                  <Label fx:id="labelWelcome" alignment="CENTER" contentDisplay="CENTER" prefHeight="76.0" prefWidth="289.0" textAlignment="CENTER" wrapText="true">
-                     <font>
-                        <Font name="Sarpanch" size="22.0" />
-                     </font>
-                  </Label>
-                  <Button mnemonicParsing="false" onAction="#searchSportCenters" prefHeight="55.0" prefWidth="150.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Search for Sport Centers" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font name="Sarpanch" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="155.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Manage your bookings" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font name="Sarpanch" size="12.0" />
-                     </font>
-                  </Button>
-               </children>
-            </VBox>
-            <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0">
-               <children>
-                  <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="58.0" prefWidth="111.0" style="-fx-background-color: transparent;" text="Log Out" underline="true" wrapText="true">
-                     <font>
-                        <Font name="Sarpanch" size="18.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
+            <Label fx:id="labelWelcome" alignment="CENTER" contentDisplay="CENTER" prefHeight="76.0" prefWidth="282.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Sarpanch" size="22.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#searchSportCenters" prefHeight="55.0" prefWidth="150.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Search for Sport Centers" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="Sarpanch" size="12.0" />
+               </font>
+            </Button>
+            <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="155.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Manage your bookings" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="Sarpanch" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="58.0" prefWidth="144.0" style="-fx-background-color: transparent; -fx-text-fill: BLACK;" text="Log Out" underline="true" wrapText="true">
+               <font>
+                  <Font name="Sarpanch" size="24.0" />
+               </font>
+            </Button>
          </children>
-      </Pane>
+      </VBox>
    </children>
 </AnchorPane>
