--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,8 +11,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.LoginGUI">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: GREEN;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.LoginGUI">
     <children>
+      <ImageView fitHeight="468.0" fitWidth="320.0" layoutY="102.0">
+         <image>
+            <Image url="@images/campo_progetto.jpg" />
+         </image>
+      </ImageView>
         <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
             <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
@@ -21,16 +27,16 @@
             </Label>
          </children>
         </HBox>
-      <Pane layoutY="102.0" prefHeight="391.0" prefWidth="320.0" style="-fx-background-color: rgb(179,252,252);">
+      <Pane layoutY="102.0" prefHeight="391.0" prefWidth="320.0" style="-fx-background-color: transparent;">
          <children>
-            <TextField fx:id="insertEmailLog" layoutX="60.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10;" />
-            <TextField fx:id="insertPassLog" layoutX="60.0" layoutY="169.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10;" />
-            <Label layoutX="73.0" layoutY="52.0" prefHeight="23.0" prefWidth="174.0" text="Insert Email Address">
+            <TextField fx:id="insertEmailLog" layoutX="60.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10; -fx-background-color: WHITE;" />
+            <PasswordField fx:id="insertPassLog" layoutX="61.0" layoutY="169.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10; -fx-background-color: WHITE;" />
+            <Label layoutX="73.0" layoutY="52.0" prefHeight="23.0" prefWidth="174.0" style="-fx-text-fill: BLACK;" text="Insert Email Address">
                <font>
                   <Font name="Stalin One" size="9.0" />
                </font>
             </Label>
-            <Label layoutX="91.0" layoutY="146.0" prefHeight="23.0" prefWidth="138.0" text="Insert Password" textAlignment="CENTER">
+            <Label layoutX="91.0" layoutY="146.0" prefHeight="23.0" prefWidth="138.0" style="-fx-text-fill: BLACK;" text="Insert Password" textAlignment="CENTER">
                <font>
                   <Font name="Stalin One" size="9.0" />
                </font>
@@ -40,17 +46,17 @@
                   <Font name="Sarpanch" size="12.0" />
                </font>
             </Button>
-            <Label layoutX="26.0" layoutY="240.0" prefHeight="18.0" prefWidth="228.0" text="Did you forget your password?  Click " wrapText="true">
+            <Label alignment="CENTER" layoutX="39.0" layoutY="240.0" prefHeight="18.0" prefWidth="200.0" style="-fx-text-fill: BLACK;" text="Did you forget password?  Click " textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="Sarpanch" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="27.0" layoutY="256.0" prefHeight="40.0" prefWidth="249.0" text="We will send you an email allowing you to set up a new one" wrapText="true">
+            <Label layoutX="39.0" layoutY="273.0" prefHeight="40.0" prefWidth="249.0" style="-fx-text-fill: BLACK;" text="We will send you an email allowing you to set up a new one" wrapText="true">
                <font>
                   <Font name="Sarpanch" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="250.0" layoutY="239.0" prefHeight="21.0" prefWidth="34.0" style="-fx-underline: true;" text="Here">
+            <Label layoutX="241.0" layoutY="239.0" prefHeight="21.0" prefWidth="34.0" style="-fx-underline: true; -fx-text-fill: BLACK;" text="Here">
                <font>
                   <Font name="Sarpanch" size="14.0" />
                </font>
@@ -62,13 +68,13 @@
             </Label>
          </children>
       </Pane>
-      <HBox alignment="CENTER" layoutY="490.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: rgb(179,252,252);">
+      <HBox alignment="CENTER" layoutY="490.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: transparent;">
          <children>
             <Button fx:id="btnBack1" mnemonicParsing="false" onAction="#back" prefHeight="48.0" prefWidth="78.0" style="-fx-background-color: transparent;">
                <graphic>
                   <ImageView fitHeight="35.0" fitWidth="45.0">
                      <image>
-                        <Image url="@images/backArrow.png" />
+                        <Image url="@images/back_24.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -77,7 +83,7 @@
                <graphic>
                   <ImageView fitHeight="46.0" fitWidth="48.0">
                      <image>
-                        <Image url="@images/homeImage.png" />
+                        <Image url="@images/home_24.png" />
                      </image>
                   </ImageView>
                </graphic>
