--- a/src/main/resources/daily_availability_weather.fxml
+++ b/src/main/resources/daily_availability_weather.fxml
@@ -10,25 +10,46 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.AvailabilityControlGUI">
+<AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: GREEN;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.AvailabilityControlGUI">
    <children>
+      <ImageView fitHeight="472.0" fitWidth="320.0" layoutY="102.0">
+         <image>
+            <Image url="@images/campo_progetto.jpg" />
+         </image>
+      </ImageView>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
-            <Label fx:id="lab_center_name" alignment="CENTER" prefHeight="79.0" prefWidth="166.0" text="Sport Center Name" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Label fx:id="lab_center_name" alignment="CENTER" prefHeight="79.0" prefWidth="158.0" text="Sport Center Name" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font name="Stalin One" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="lab_date" alignment="CENTER" prefHeight="30.0" prefWidth="128.0" text="18-11-2023" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Sarpanch" size="20.0" />
-               </font>
-            </Label>
+            <VBox prefHeight="200.0" spacing="15.0">
+               <children>
+                  <Label fx:id="lab_date" alignment="CENTER" prefHeight="30.0" prefWidth="138.0" text="Date" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="Sarpanch" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lab_price" alignment="CENTER" prefHeight="30.0" prefWidth="138.0" text="Price" textFill="#eeff00">
+                     <font>
+                        <Font name="Sarpanch" size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+            </VBox>
          </children>
+         <padding>
+            <Insets left="15.0" right="15.0" />
+         </padding>
       </HBox>
-      <GridPane alignment="CENTER" layoutY="102.0" prefHeight="390.0" prefWidth="320.0" style="-fx-background-color: rgb(179,252,252);">
+      <GridPane alignment="CENTER" layoutY="102.0" prefHeight="390.0" prefWidth="320.0" style="-fx-background-color: transparent;" AnchorPane.topAnchor="110.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="90.20001220703125" minWidth="10.0" prefWidth="64.6000244140625" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="87.20004425048829" minWidth="10.0" prefWidth="59.200012207031264" />
@@ -46,106 +67,106 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="22.0" prefWidth="44.0" text="15-16" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Label alignment="CENTER" prefHeight="27.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="15-16" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="avail15" alignment="CENTER" prefHeight="22.0" prefWidth="120.0" GridPane.columnIndex="2">
+            <Label fx:id="avail15" alignment="CENTER" prefHeight="22.0" prefWidth="120.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="28.0" prefHeight="22.0" prefWidth="44.0" text="16-17" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="28.0" prefHeight="27.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="16-17" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="87.0" prefHeight="22.0" prefWidth="44.0" text="17-18" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="87.0" prefHeight="27.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="17-18" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="145.0" prefHeight="22.0" prefWidth="44.0" text="18-19" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="145.0" prefHeight="27.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="18-19" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="204.0" prefHeight="22.0" prefWidth="44.0" text="19-20" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="204.0" prefHeight="27.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="19-20" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="262.0" prefHeight="22.0" prefWidth="44.0" text="20-21" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="262.0" prefHeight="27.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="20-21" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="320.0" prefHeight="22.0" prefWidth="44.0" text="21-22" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="320.0" prefHeight="22.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="21-22" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="90.0" layoutY="379.0" prefHeight="22.0" prefWidth="44.0" text="22-23" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7">
+            <Label alignment="CENTER" layoutX="90.0" layoutY="379.0" prefHeight="22.0" prefWidth="53.0" style="-fx-text-fill: BLACK;" text="22-23" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <font>
-                  <Font name="Sarpanch" size="15.0" />
+                  <Font name="Sarpanch" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="avail16" alignment="CENTER" layoutX="170.0" layoutY="21.0" prefHeight="22.0" prefWidth="110.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Label fx:id="avail16" alignment="CENTER" layoutX="170.0" layoutY="21.0" prefHeight="22.0" prefWidth="110.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="avail17" alignment="CENTER" layoutX="170.0" layoutY="71.0" prefHeight="22.0" prefWidth="112.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Label fx:id="avail17" alignment="CENTER" layoutX="170.0" layoutY="71.0" prefHeight="22.0" prefWidth="112.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="avail18" alignment="CENTER" layoutX="170.0" layoutY="120.0" prefHeight="22.0" prefWidth="112.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Label fx:id="avail18" alignment="CENTER" layoutX="170.0" layoutY="120.0" prefHeight="22.0" prefWidth="112.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="avail19" alignment="CENTER" layoutX="170.0" layoutY="169.0" prefHeight="22.0" prefWidth="114.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Label fx:id="avail19" alignment="CENTER" layoutX="170.0" layoutY="169.0" prefHeight="22.0" prefWidth="114.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="avail20" alignment="CENTER" layoutX="170.0" layoutY="219.0" prefHeight="22.0" prefWidth="111.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
+            <Label fx:id="avail20" alignment="CENTER" layoutX="170.0" layoutY="219.0" prefHeight="22.0" prefWidth="111.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="avail21" alignment="CENTER" layoutX="170.0" layoutY="268.0" prefHeight="22.0" prefWidth="113.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
+            <Label fx:id="avail21" alignment="CENTER" layoutX="170.0" layoutY="268.0" prefHeight="22.0" prefWidth="113.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="6">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="avail22" alignment="CENTER" layoutX="170.0" layoutY="317.0" prefHeight="22.0" prefWidth="118.0" GridPane.columnIndex="2" GridPane.rowIndex="7">
+            <Label fx:id="avail22" alignment="CENTER" layoutX="170.0" layoutY="317.0" prefHeight="22.0" prefWidth="118.0" style="-fx-text-fill: BLACK;" GridPane.columnIndex="2" GridPane.rowIndex="7">
                <font>
                   <Font name="Sarpanch" size="15.0" />
                </font>
@@ -227,13 +248,13 @@
             <Insets top="10.0" />
          </padding>
       </GridPane>
-      <HBox alignment="CENTER" layoutY="492.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: rgb(179,252,252);">
+      <HBox alignment="CENTER" layoutY="492.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: transparent;">
          <children>
             <Button fx:id="btnBack1" mnemonicParsing="false" onAction="#back" prefHeight="48.0" prefWidth="78.0" style="-fx-background-color: transparent;">
                <graphic>
                   <ImageView fitHeight="35.0" fitWidth="45.0">
                      <image>
-                        <Image url="@images/backArrow.png" />
+                        <Image url="@images/back_24.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -242,7 +263,7 @@
                <graphic>
                   <ImageView fitHeight="46.0" fitWidth="48.0">
                      <image>
-                        <Image url="@images/homeImage.png" />
+                        <Image url="@images/home_24.png" />
                      </image>
                   </ImageView>
                </graphic>
