--- a/src/main/resources/Connect5.fxml
+++ b/src/main/resources/Connect5.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -24,13 +23,10 @@
       </ImageView>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
-            <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Stalin One" size="25.0" />
+                  <Font name="Showcard Gothic" size="38.0" />
                </font>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
             </Label>
          </children>
       </HBox>
@@ -38,12 +34,12 @@
          <children>
             <Button fx:id="btnLog" mnemonicParsing="false" onAction="#login" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Login" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Sarpanch" size="13.0" />
+                  <Font name="Showcard Gothic" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="btnCreatAcc" mnemonicParsing="false" onAction="#createAccount" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20; -fx-border-color: BLACK; -fx-border-radius: 20;" text="Crea Account" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="btnCreatAcc" mnemonicParsing="false" onAction="#createAccount" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20; -fx-border-color: BLACK; -fx-border-radius: 20;" text="Create Account" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="13.0" />
+                  <Font name="Showcard Gothic" size="12.0" />
                </font>
             </Button>
          </children>
