--- a/src/main/resources/Logged.fxml
+++ b/src/main/resources/Logged.fxml
@@ -18,33 +18,33 @@
       </ImageView>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
-            <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Stalin One" size="25.0" />
+                  <Font name="Showcard Gothic" size="38.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <VBox alignment="CENTER" layoutY="102.0" prefHeight="468.0" prefWidth="320.0" spacing="50.0">
+      <VBox alignment="CENTER" layoutY="102.0" prefHeight="468.0" prefWidth="320.0" spacing="45.0">
          <children>
-            <Label fx:id="labelWelcome" alignment="CENTER" contentDisplay="CENTER" prefHeight="76.0" prefWidth="282.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
+            <Label fx:id="labelWelcome" alignment="CENTER" contentDisplay="CENTER" prefHeight="105.0" prefWidth="282.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="22.0" />
+                  <Font name="Showcard Gothic" size="32.0" />
                </font>
             </Label>
             <Button mnemonicParsing="false" onAction="#searchSportCenters" prefHeight="55.0" prefWidth="150.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Search for Sport Centers" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="Showcard Gothic" size="12.0" />
                </font>
             </Button>
             <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="155.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Manage your bookings" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="Showcard Gothic" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="58.0" prefWidth="144.0" style="-fx-background-color: transparent; -fx-text-fill: BLACK;" text="Log Out" underline="true" wrapText="true">
+            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#home" prefHeight="18.0" prefWidth="140.0" style="-fx-background-color: transparent; -fx-text-fill: BLACK;" text="Log Out" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="24.0" />
+                  <Font name="AR DARLING" size="26.0" />
                </font>
             </Button>
          </children>
