--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -20,9 +20,9 @@
       </ImageView>
         <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
-            <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Stalin One" size="25.0" />
+                  <Font name="Showcard Gothic" size="38.0" />
                </font>
             </Label>
          </children>
@@ -31,39 +31,39 @@
          <children>
             <TextField fx:id="insertEmailLog" layoutX="60.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10; -fx-background-color: WHITE;" />
             <PasswordField fx:id="insertPassLog" layoutX="61.0" layoutY="169.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10; -fx-background-color: WHITE;" />
-            <Label layoutX="73.0" layoutY="52.0" prefHeight="23.0" prefWidth="174.0" style="-fx-text-fill: BLACK;" text="Insert Email Address">
+            <Label layoutX="80.0" layoutY="52.0" prefHeight="23.0" prefWidth="161.0" style="-fx-text-fill: BLACK;" text="Insert Email Address">
                <font>
-                  <Font name="Stalin One" size="9.0" />
+                  <Font name="AR DESTINE" size="16.0" />
                </font>
             </Label>
-            <Label layoutX="91.0" layoutY="146.0" prefHeight="23.0" prefWidth="138.0" style="-fx-text-fill: BLACK;" text="Insert Password" textAlignment="CENTER">
+            <Label layoutX="96.0" layoutY="146.0" prefHeight="23.0" prefWidth="128.0" style="-fx-text-fill: BLACK;" text="Insert Password" textAlignment="CENTER">
                <font>
-                  <Font name="Stalin One" size="9.0" />
+                  <Font name="AR DESTINE" size="16.0" />
                </font>
             </Label>
             <Button fx:id="btnConfirm" layoutX="195.0" layoutY="331.0" mnemonicParsing="false" onAction="#loginVerify" prefHeight="34.0" prefWidth="72.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textFill="#fffdfd">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="Showcard Gothic" size="12.0" />
                </font>
             </Button>
             <Label alignment="CENTER" layoutX="39.0" layoutY="240.0" prefHeight="18.0" prefWidth="200.0" style="-fx-text-fill: BLACK;" text="Did you forget password?  Click " textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="AR DARLING" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="39.0" layoutY="273.0" prefHeight="40.0" prefWidth="249.0" style="-fx-text-fill: BLACK;" text="We will send you an email allowing you to set up a new one" wrapText="true">
+            <Label layoutX="39.0" layoutY="270.0" prefHeight="40.0" prefWidth="249.0" style="-fx-text-fill: BLACK;" text="We will send you an email allowing you to set up a new one" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="AR DARLING" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="241.0" layoutY="239.0" prefHeight="21.0" prefWidth="34.0" style="-fx-underline: true; -fx-text-fill: BLACK;" text="Here">
+            <Label layoutX="240.0" layoutY="236.0" prefHeight="23.0" prefWidth="39.0" style="-fx-underline: true; -fx-text-fill: BLACK;" text="Here">
                <font>
-                  <Font name="Sarpanch" size="14.0" />
+                  <Font name="AR DARLING" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="errorLabel" layoutX="14.0" layoutY="305.0" prefHeight="60.0" prefWidth="167.0" text="Incorrect email.  Please insert a valid email" textFill="RED" visible="false" wrapText="true">
+            <Label fx:id="errorLabel" layoutX="14.0" layoutY="314.0" prefHeight="60.0" prefWidth="167.0" text="Incorrect email.  Please insert a valid email" textAlignment="CENTER" textFill="#eaff00" visible="false" wrapText="true">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="AR DARLING" size="13.0" />
                </font>
             </Label>
          </children>
